--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ import(clusterProfiler)
 import(jsonlite)
 import(magrittr)
 import(org.Hs.eg.db)
+import(shiny)
 importFrom(grDevices,colorRampPalette)
