--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,17 @@
 
 export(summarize)
 export(visualize)
+import(DT)
+import(cluster)
+import(dplyr)
+import(purrr)
+import(rio)
+import(stringr)
+import(viridis)
+importFrom(clusterProfiler,download_KEGG)
 importFrom(grDevices,colorRampPalette)
+importFrom(readr,read_tsv)
+importFrom(reshape2,dcast)
+importFrom(reshape2,melt)
+importFrom(shinythemes,shinytheme)
+importFrom(stats,cutree)
