--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,37 @@
 
 export(summarize)
 export(visualize)
-import(DT)
+import(BioCircos)
+import(IRanges)
 import(cluster)
-import(dplyr)
-import(purrr)
+import(conquer.d3js)
+import(ggplot2)
+import(htmlwidgets)
 import(rio)
+import(shiny)
 import(stringr)
 import(viridis)
+importFrom(BioCircos,BioCircosOutput)
+importFrom(BioCircos,renderBioCircos)
+importFrom(BiocGenerics,end)
+importFrom(BiocGenerics,start)
+importFrom(BiocGenerics,toTable)
+importFrom(DT,DTOutput)
+importFrom(DT,renderDT)
 importFrom(clusterProfiler,download_KEGG)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,first)
 importFrom(grDevices,colorRampPalette)
+importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
+importFrom(purrr,cross_df)
 importFrom(readr,read_tsv)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(shiny,runApp)
 importFrom(shinythemes,shinytheme)
 importFrom(stats,cutree)
