Added help bottons and changed download buttons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,7 @@ importFrom(readr,read_tsv)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(shiny,runApp)
+importFrom(shinyjs,toggle)
+importFrom(shinyjs,useShinyjs)
 importFrom(shinythemes,shinytheme)
 importFrom(stats,cutree)
