--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,10 +20,13 @@ importFrom(BiocGenerics,toTable)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(clusterProfiler,download_KEGG)
+importFrom(coloc,finemap.abf)
+importFrom(curl,curl_fetch_memory)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
 importFrom(grDevices,colorRampPalette)
+importFrom(jsonlite,fromJSON)
 importFrom(plotly,ggplotly)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
@@ -31,10 +34,13 @@ importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,cross_df)
 importFrom(readr,read_tsv)
+importFrom(reshape2,colsplit)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(shiny,runApp)
+importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,toggle)
 importFrom(shinyjs,useShinyjs)
 importFrom(shinythemes,shinytheme)
 importFrom(stats,cutree)
+importFrom(viridis,viridis_pal)
