ImportFrom to import shinycssloaders

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(ggplot2)
 import(htmlwidgets)
 import(rio)
 import(shiny)
+import(shinycssloaders)
 import(stringr)
 import(viridis)
 importFrom(BioCircos,BioCircosOutput)
@@ -38,7 +39,6 @@ importFrom(reshape2,colsplit)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(shiny,runApp)
-importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,toggle)
 importFrom(shinyjs,useShinyjs)
 importFrom(shinythemes,shinytheme)
