--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(BioCircos)
 import(IRanges)
 import(cluster)
 import(conquer.d3js)
+import(enrichR)
 import(ggplot2)
 import(htmlwidgets)
 import(rio)
