Overlap figure between QTLs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(BiocGenerics,start)
 importFrom(BiocGenerics,toTable)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
+importFrom(UpSetR,fromList)
 importFrom(clusterProfiler,download_KEGG)
 importFrom(coloc,finemap.abf)
 importFrom(curl,curl_fetch_memory)
