--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(BiocGenerics,toTable)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(UpSetR,fromList)
+importFrom(UpSetR,upset)
 importFrom(clusterProfiler,download_KEGG)
 importFrom(coloc,finemap.abf)
 importFrom(curl,curl_fetch_memory)
