--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(conquer.d3js)
 import(enrichR)
 import(ggplot2)
 import(htmlwidgets)
+import(magrittr)
 import(rio)
 import(shiny)
 import(shinycssloaders)
